scripts/kube-backend-service-loadbalancer-gcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-service-gcp
spec:
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: http
  selector:
    apps: backend-gcp
  type: LoadBalancer
