scripts/kube-backend-service-node-gcp.yaml
apiVersion: v1
kind: Service
metadata:
  name:  kube-node-service-gcp
  labels:
    apps: backend-gcp
spec:
  type: NodePort
  selector:
    apps: backend-gcp
  ports:
  - port: 8081
    targetPort: 8081
