scripts/kube-backend-service-node-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name:  kube-node-service-nginx
  labels:
    apps: backend-gcp
spec:
  type: NodePort
  selector:
    apps: backend-nginx
  ports:
  - port: 8081
    targetPort: 8081
