scripts/kube-backend-ingress-ssl-gcp.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-ingress-gcp
  annotations:
     kubernetes.io/ingress.allow-http: "true"
     kubernetes.io/ingress.global-static-ip-name: navveen-api-ip	
spec:
  tls:
  - hosts:
    - apis.navveenbalani.dev
    secretName: kube-api-ssl-secret
  rules:
  - host: apis.navveenbalani.dev
    http:
      paths:
      - backend:
            serviceName: kube-node-service-gcp		
            servicePort: 8081
