scripts/kube-backend-ingress-whitelist-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/whitelist-source-range: "105.19.1.10/10"
spec:
  rules:
  - http:
      paths:
      - backend:
            serviceName: kube-node-service-nginx		
            servicePort: 8081
